--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
         </div>
 
         <div class="container-projetos">
-          <li><a href="https://codepen.io/amanda_freire0402/full/NWgwLzJ" target="_blank">🔮 Mentalista</a></li>
-          <img class="preview" src="https://i.imgur.com/i6WTrND.png">
+          <li><a href="https://codepen.io/amanda_freire0402/full/PojOKNR" target="_blank">🔮 Mentalista</a></li>
+          <img class="preview" src="https://i.imgur.com/Q2U3W8w.png">
+        </div>
+
+        <div class="linkEsteProjeto">
+          <li><a href="https://codepen.io/amanda_freire0402/full/NWgwLzJ" target="_blank">Primeira versão do Mentalista</a></li>
         </div>
 
         <div class="container-projetos">
