--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <div class="container-projetos">
-          <li><a href="https://codepen.io/amanda_freire0402/full/bGRJzYK" target="_blank">🃏 Super Trunfo V2</a></li>
+          <li><a href="https://codepen.io/amanda_freire0402/full/bGRJzYK" target="_blank">🃏 Super Trunfo</a></li>
           <img class="preview" src="https://i.imgur.com/ZNnIpOl.png">
         </div>
 
